# Nexus

./: .env.example  .gitignore  =5.8.0  LICENSE  README.md  config.yaml  cripts  install  pyproject.toml  requirements.txt  sessment  setup.py  ys
generated-docs/: README.md
generated-docs/arch/: index.md
generated-docs/discovery/: index.md
generated-docs/exec/: index.md
generated-docs/impl/: index.md
generated-docs/int/: index.md
generated-docs/prd/: index.md
generated-docs/rules/: index.md
generated-docs/task/: index.md
generated-docs/tests/: index.md
installers/: install-macos.sh  install.bat  install.py  install.sh
nexus_docs/: README.md
nexus_docs/arch/: index.md
nexus_docs/discovery/: DISC-2025-09-11-dar-discovery-system.md  DISC-2025-09-11-deep-analysis-report.md  DISC-2025-09-11-discoverysystemadded.md  DISC-2025-09-11-enhanced-analysis-test.md  DISC-2025-09-11-fixed-discovery-system-test.md  DISC-2025-09-11-nexus-project-analysis.md  index.md
nexus_docs/exec/: index.md
nexus_docs/impl/: index.md
nexus_docs/int/: index.md
nexus_docs/prd/: index.md
nexus_docs/rules/: index.md
nexus_docs/task/: index.md
nexus_docs/tests/: index.md
scripts/: sync_version.py
src/nexus/: __main__.py
src/nexus/cli/: __init__.py  discover.py  main.py
src/nexus/core/: __init__.py  commands.py  config.py  content_analyzer.py  content_enhancer.py  content_migrator.py  generator.py  hybrid_config.py  installer.py  instructions.py  integration_tester.py  performance_tester.py  project_init.py  server.py  status.py  template_discovery.py  templates.py  updater.py  validator.py  version.py
src/nexus/core/discovery/: __init__.py  analyzer.py  cache.py  engine.py  outputs.py  reports.py  synthesizer.py  validator.py
src/nexus/docs/configs/: README.md
src/nexus/docs/configs/environments/: development.yaml  production.yaml  staging.yaml  testing.yaml
src/nexus/docs/configs/examples/: docs_example.py  serve_example.py
src/nexus/docs/configs/schemas/: config.schema.json  environment.schema.json
src/nexus/docs/configs/templates/: config.template.yaml  logging.template.yaml  project.template.yaml
src/nexus/docs/examples/: discovery_example.py
src/nexus/docs/readmes/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLER_CHECKLIST.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md
test_results/: integration_results.json  performance_results.json
