[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-context"
version = "0.1.0"
description = "AI context orchestration system for Cursor and other coding assistants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team", email = "contact@nexus-project.dev"}
]
keywords = ["ai", "context", "documentation", "cursor", "coding-assistant", "nexus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
]

[project.scripts]
nexus = "nexus.__main__:main"

[project.urls]
Homepage = "https://github.com/rmans/Nexus"
Repository = "https://github.com/rmans/Nexus"
Documentation = "https://github.com/rmans/Nexus#readme"
"Bug Reports" = "https://github.com/rmans/Nexus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus = [
    "commands/*.md",
    "instructions/*.md", 
    "templates/**/*",
    "docs/readmes/*.md",
]
