[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-context"
version = "1.0.0"
description = "A modular project framework with fixed hybrid configuration system and professional installer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team", email = "contact@nexus-project.dev"}
]
keywords = [
    "ai", "context", "documentation", "cursor", "coding-assistant", "nexus",
    "configuration", "installer", "hybrid-config", "project-framework",
    "modular", "development", "automation", "templates", "schemas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Markup",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "rich>=12.0.0",
    "pathlib2>=2.3.0; python_version < '3.4'",
    "typing-extensions>=4.0.0; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.0.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
installer = [
    "pyinstaller>=5.0.0",
    "cx-freeze>=6.0.0",
    "py2exe>=0.10.0; sys_platform == 'win32'",
    "py2app>=0.28.0; sys_platform == 'darwin'",
]
config = [
    "jsonschema>=4.0.0",
    "pydantic>=1.10.0",
    "python-dotenv>=0.19.0",
    "configparser>=5.0.0",
]

[project.scripts]
nexus = "nexus.__main__:main"

[project.urls]
Homepage = "https://github.com/rmans/Nexus"
Repository = "https://github.com/rmans/Nexus"
Documentation = "https://github.com/rmans/Nexus#readme"
"Bug Reports" = "https://github.com/rmans/Nexus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus = [
    "commands/*.md",
    "instructions/*.md", 
    "templates/**/*",
    "docs/readmes/*.md",
    "docs/configs/**/*",
    "cli/**/*",
    "core/**/*",
    "*.py",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.md",
    "*.txt",
    "*.sh",
    "*.bat",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nexus"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=nexus",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
